new proj/src/objects/GE_PW_Strategic_Deal_Information__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PWAP_Strength_for_CTQ_1__c</fullName>
        <label>GE Strength for CTQ-1</label>
        <picklist>
            <picklistValues>
                <fullName>0-Cannot Satisfy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Can Easilty Satisfy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PWAP_Strength_for_CTQ_2__c</fullName>
        <label>GE Strength for CTQ-2</label>
        <picklist>
            <picklistValues>
                <fullName>0-Cannot Satisfy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Can Easily Satisfy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PWAP_Strength_for_CTQ_3__c</fullName>
        <label>GE Strength for CTQ-3</label>
        <picklist>
            <picklistValues>
                <fullName>0-Cannot Satisfy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Can Easily Satisfy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_AP__c</fullName>
        <label>Air Permit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_BApl__c</fullName>
        <label>Board Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_BDt__c</fullName>
        <label>Bid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_BP__c</fullName>
        <label>Build Permit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_CODDt__c</fullName>
        <label>COD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_COEAR__c</fullName>
        <label>COE/Analsysis Results</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_CS__c</fullName>
        <label>Commercial Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_Comts__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_Cyl__c</fullName>
        <label>Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Simple Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cogeneration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined Cycle Cogeneration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_EAPR__c</fullName>
        <label>EA&amp;P Recommendation</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_EGEC__c</fullName>
        <label>Existing GE Customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_EPCS__c</fullName>
        <label>EPC Selection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_EUT__c</fullName>
        <label>End User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Electric Utility Power Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine Propulsion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Utility Power Gen (IPP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offshore – Fixed Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offshore – FPSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offshore – Shipboard Power</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_FCDt__c</fullName>
        <label>Financial Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_FS__c</fullName>
        <label>Financing Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_GC__c</fullName>
        <label>Gas Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_GHCPAC__c</fullName>
        <label>Has Customer provided analysis criteria?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_HCOEC__c</fullName>
        <label>Has COE been completed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_IS__c</fullName>
        <label>Industrial Segment (if applicable)</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desalination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Parks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landfill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulp &amp; Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G – Gas Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G – Gas Reinjecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G – Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G - Refineries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_PPA__c</fullName>
        <label>PPA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_PSS__c</fullName>
        <label>Project Status Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_PS__c</fullName>
        <label>Product Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_RFPDt__c</fullName>
        <label>RFP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_RStg__c</fullName>
        <formula>Text(GE_PW_Opportunity__r.GE_ES_R_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_SS__c</fullName>
        <label>Services Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_TCS__c</fullName>
        <label>T&apos;s &amp; C&apos;s Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Standard C-drafter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Aero Contract Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Existing GE Business Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_Utlz__c</fullName>
        <label>Utilization</label>
        <picklist>
            <picklistValues>
                <fullName>Emergency Peaker (&lt;500 hrs/yr)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peaker (500-2999 hrs/yr)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-merit (3000-5999 hrs/yr)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Load (6000+ hrs/yr)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_AP_VO__c</fullName>
        <label>Vertical Offering?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_AS_Strategy__c</fullName>
        <label>Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Advantages_our_partners_bring__c</fullName>
        <label>Advantages our partners (if any) bring ?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Age_of_existing_equipment__c</fullName>
        <label>Age of existing equipment:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Annual_Revenue__c</fullName>
        <label>Annual Revenue:</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PW_Any_current_GE_relationships__c</fullName>
        <label>Are there any current GE relationships ?</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Water CMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Water ES</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Are_ContactRoles_defined_for_oppty__c</fullName>
        <label>Are ContactRoles defined for this oppty</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Are_there_any_EH_S_risks__c</fullName>
        <label>Are there any EH&amp;S risks ?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Base_Monthly_Fee__c</fullName>
        <label>Base Monthly Fee</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PW_Buyer_Need_Statement__c</fullName>
        <label>Buyer Need Statement</label>
        <length>3500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_CM__c</fullName>
        <label>CM%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PW_CTQ_1_Weight__c</fullName>
        <label>CTQ-1 Weight</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_CTQ_1__c</fullName>
        <label>CTQ-1</label>
        <picklist>
            <picklistValues>
                <fullName>1.Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.BoP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Energy Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Local Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.Local Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.Maintenance Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.Offsite Support (RoC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.Onsite Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.Operating Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.Payment Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18.Project IRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.Project NPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.Service Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.T&amp;C&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.Technology Leadership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_CTQ_2_Weight__c</fullName>
        <label>CTQ-2 Weight</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_CTQ_2__c</fullName>
        <label>CTQ-2</label>
        <picklist>
            <picklistValues>
                <fullName>1.Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.BoP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Energy Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Local Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.Local Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.Maintenance Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.Offsite Support (RoC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.Onsite Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.Operating Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.Payment Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18.Project IRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.Project NPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.Service Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.T&amp;C&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.Technology Leadership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_CTQ_3_Weight__c</fullName>
        <label>CTQ-3 Weight</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_CTQ_3__c</fullName>
        <label>CTQ-3</label>
        <picklist>
            <picklistValues>
                <fullName>1.Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.BoP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Energy Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Local Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.Local Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.Maintenance Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.Offsite Support (RoC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.Onsite Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.Operating Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.Payment Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18.Project IRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.Project NPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.Service Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.T&amp;C&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.Technology Leadership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Can_flow_be_used_as_advantage__c</fullName>
        <label>Can flow be used as advantage?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Client_Experience_with_Outsourcing__c</fullName>
        <label>Client Experience with Outsourcing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Client_using_any_Mobile_Service__c</fullName>
        <label>Has Client been using any Mobile Service</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Comments_from_GFS_OTR__c</fullName>
        <label>Comments from GFS/OTR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Comments_on_ECA_Financing__c</fullName>
        <label>Comments on ECA Financing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_Customer_CTQ_1__c</fullName>
        <label>Customer CTQ-1</label>
        <picklist>
            <picklistValues>
                <fullName>Highest Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest Total Life Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Removal Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smallest Footprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowest Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.BoP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Energy Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Local Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.Local Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.Maintenance Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.Offsite Support (RoC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.Onsite Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.Operating Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.Payment Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18.Project IRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.Project NPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.Service Capability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>